# aus_senate

./: .gitignore  .travis.yml  Cargo.toml  README.md  data_sources.json  election2013.sh  election2016.sh  fetch_data.py  run.py  states.json  stats.md
doc/: BallotParsing.md  Deciding2013Election.md  HashmapVsVec.md
examples/: tie.rs
misc/: NSW_tie_breakers.txt
rvb/: NSW.modified  QLD.modified  QLD.normal  SA.modified  SA.normal
rvb/exhausted/: NSW.modified.csv  SA.modified.csv
src/: arith.rs  ballot.rs  ballot_parse.rs  candidate.rs  cli.rs  election2016.rs  exhausted_votes.rs  file_logger.rs  group.rs  lib.rs  main.rs  memo.rs  parse.rs  quota.rs  senate_result.rs  stats.rs  transfer_value.rs  util.rs  vote_log.rs  vote_map.rs  voting.rs
src/munge/: ballot_munge.rs  mod.rs  red_vs_blue.rs
src/parse/: btl2013.rs  candidate_ids2016.rs  candidates.rs  candidates2016.rs  gvt2013.rs  gvt_usage2013.rs  mod.rs  prefs2016.rs  prelude.rs
tests/: election2016.rs
