[package]
name = "aus_senate"
version = "0.2.0"
authors = ["Michael Sproul <micsproul@gmail.com>"]
license = "GPL-3.0+"

[dependencies]
serde = "1"
serde_derive = "1"
csv = "1.0.0-beta.3"
log = "0.3"
env_logger = "0.3"
rust-gmp = "0.4"
text_io = "0.1"
unwrap = "1.1"

[profile.release]
debug = true

[features]
osx_mem_profile = []
