[package]
name = "aus_senate"
version = "0.2.0"
authors = ["Michael Sproul <micsproul@gmail.com>"]
license = "GPL-3.0+"

[dependencies]
serde = "1"
serde_derive = "1"
csv = "1.0.0-beta.3"
log = "0.3"
env_logger = "0.4"
rust-gmp = "0.5"
unwrap = "1.1"
itertools = "0.6"
rand = "0.3"
lazy_static = "1.3.0"

[profile.release]
debug = true

[features]
osx_mem_profile = []
support2013 = []

[[bin]]
name = "election2016"

[[bin]]
name = "election2013"
required-features = ["support2013"]
